exercises for lists on TOP

--- a/html-boilerplate/lists.html
+++ b/html-boilerplate/lists.html
@@ -3,12 +3,41 @@
 
 <head>
     <meta charset="UTF-8">
-    <title> Insert title here </title>
+    <title> Hello </title>
 </head>
 
 <body>
-    <h1> Hello World! </h1>
     <h1> Insert header 1...6 etc</h1>
+
+    <p>
+        testing ul (unordered list) and ol, ordered list
+    </p>
+
+    <ul>
+        <li> Item 1</li>
+        <li> Item 2</li>
+        <li> Item 3</li>
+        <li> Item 4</li>
+    </ul>
+
+    <p>
+        testing ordered (ol), notice how the list has numbers 1. 2. etc
+    </p>
+
+    <ol>
+        <li> Item 1</li>
+        <li> Item 2</li>
+        <li> Item 3</li>
+        <li> Item 4</li>
+    </ol>
+
+    <h3> Assignment on lists</h3> 
+    <p> Create: 
+        An unordered list of favorite foods <br>
+        An ordered list of todo's done today <br>
+        An unordered list of places I want to visit some day <br>
+        An ordered list of top 5 movies <br>
+    </p>
 
 </body>
 
