commiting changes, but pushing via CLI

--- a/html-boilerplate/lists.html
+++ b/html-boilerplate/lists.html
@@ -21,7 +21,7 @@
     </ul>
 
     <p>
-        testing ordered (ol), notice how the list has numbers 1. 2. etc
+        testing ordered (ol), notice how the list has numbers 1. 2. 3. etc
     </p>
 
     <ol>
