finished links and images on TOP

--- a/html-boilerplate/lists.html
+++ b/html-boilerplate/lists.html
@@ -39,6 +39,40 @@
         An ordered list of top 5 movies <br>
     </p>
 
+    <h4> unordered shopping list of favorite foods </h4>
+
+    <ul>
+        <li> Spaghetti and Meat balls</li>
+        <li> Bacon</li>
+        <li> Arizona Tea</li>
+    </ul>
+    
+    <h4> Ordered list of things to-do today</h4>
+
+    <ol>
+        <li> Work</li>
+        <li> Laundry</li>
+        <li> Print out notes</li>
+        <li> Shower</li>
+    </ol>
+
+    <h4> unordered list of places wanting to visit</h4>
+    <ul>
+        <li> Egypt (for pyramids) </li>
+        <li> Scotland / Ireland (for castles) </li>
+        <li> France, Paris (Eifel tower) </li> 
+    </ul> 
+
+    <h3> Orderd list of top 5 all time movies. </h3>
+    
+    <ol>
+        <li> Interstellar </li>
+        <li> Avengers End Game </li>
+        <li> Hereditary </li>
+        <li> The Conjuring 1 </li>
+        <li> The Shawshank Redemption </li>
+    </ol>
+
 </body>
 
 </html>
