added a rice recipe

--- a/files/odin-recipes/index.html
+++ b/files/odin-recipes/index.html
@@ -10,6 +10,8 @@
     <h1> Recipes </h1>
 
     <a href = "recipes/spaghetti.html"> Check out my amazing spaghetti recipe!</a>
+    <br>
+    <a href = "recipes/fried_rice.html"> For a rice dish, check this out! </a>
 
 </body>
 
