--- a/files/odin-recipes/recipes/spaghetti.html
+++ b/files/odin-recipes/recipes/spaghetti.html
@@ -1,4 +1,5 @@
 <h1> Spaghetti </h1>
+<title> Spaghetti </title>
 
 <body>
 
@@ -27,7 +28,10 @@
     <li> Add garlic to pot, and saute for a minute or two </li>
     <li> Add in the onions, and leave on low heat to soften </li>
     <li> Add dry pasta to boiling water, and submerge noodles, boil for 10 minutes </li>
-    <li> </li>
+    <li> Put sausage into pot of garlic and onion, cook until brown</li>
+    <li> Add in jar of pasta sauce</li>
+    <li> Simmer for 25-30 minutes</li> 
+    <li> Plate noodles and pour desired amount of sauce and enjoy! </li> 
 
 </ol> 
 
