added return to homepage

--- a/files/odin-recipes/recipes/fried_rice.html
+++ b/files/odin-recipes/recipes/fried_rice.html
@@ -30,4 +30,7 @@
         <li> Add in soy sauce and sesame oil, and toss </li>
         <li> Plate and enjoy! </li>
     </ol>
+    <br>
+    <br>
+    <a href="../index.html"> Return to homepage </a>
 </body>
