--- a/files/odin-recipes/recipes/spaghetti.html
+++ b/files/odin-recipes/recipes/spaghetti.html
@@ -34,5 +34,8 @@
     <li> Plate noodles and pour desired amount of sauce and enjoy! </li> 
 
 </ol> 
+<br>
+<br>
+<a href="../index.html"> Return to homepage </a>
 
 </body>
