added link to home

--- a/files/odin-recipes/recipes/fried_rice.html
+++ b/files/odin-recipes/recipes/fried_rice.html
@@ -1,3 +1,8 @@
+<style>
+    div {
+        color: red;
+    }
+</style>
 <h1> Garic Fried Rice </h1>
 
 <title> Garlic Fried Rice </title>
@@ -30,6 +35,7 @@
         <li> Add in soy sauce and sesame oil, and toss </li>
         <li> Plate and enjoy! </li>
     </ol>
+    <div> this is red</div>
     <br>
     <br>
     <a href="../index.html"> Return to homepage </a>
